@@ -17,6 +17,7 @@ if hasattr(sys, 'frozen'):
     prefix = os.path.dirname(sys.executable)
     os.environ['GTK_EXE_PREFIX'] = prefix
     os.environ['GTK_DATA_PREFIX'] = prefix
+    os.environ['EVINCE_BACKENDS_DIR'] = prefix
     os.environ['XDG_DATA_DIRS'] = os.path.join(prefix, 'share')
     etc = os.path.join(prefix, 'etc')
     os.environ['GDK_PIXBUF_MODULE_FILE'] = os.path.join(
